
add_subdirectory(test_nodes)
add_subdirectory(test_collections)
add_subdirectory(test_messaging)
add_subdirectory(test_messaging_publish)
add_subdirectory(test_boost_mq)
add_subdirectory(test_boost_serializer)
add_subdirectory(test_transport)
add_subdirectory(test_transport_publish)
add_subdirectory(test_functor)
add_subdirectory(test_signature)
add_subdirectory(test_maps)
add_subdirectory(test_raw_publish)
cond_subdirectory(test_thrift_serialization WITH_THRIFT)
cond_subdirectory(test_protobuf_serialization WITH_PROTOBUF)
